--- a/src/components/SortingVis/SortingVis.css
+++ b/src/components/SortingVis/SortingVis.css
@@ -1,7 +1,12 @@
+.container{
+    background-color: #fff;
+    margin: 0;
+}
 .array-bars-container{
-    position: absolute;
+    background-color: #fff;
+    /* position: absolute;
     left: 6vw;
-    top: 100px;
+    top: 100px; */
 }
 .ui.menu {
     border-radius: 0px !important;
